# slm_repo

./: .env.example  .gitignore  PROJECT.md  README.md  TAP_COMPATIBILITY.md  Taskfile.yaml  convention.md  pyproject.toml  registry.yaml  requirement.txt  requirement_m3.txt  zip_slm_repo_for_review.sh
.dvc/: config
.github/workflows/: sync-components.yml
artifacts/: coding_data.dvc
artifacts/data/: dolma_v1_6_sample.dvc
artifacts/tokenizer/: 20260402_111805.dvc  20260403_125958.dvc
configs/data/: preprocess.yaml
configs/experiment/: baseline.yaml  scaling_law.yaml
configs/model/: base.yaml
configs/train/: ALG.yaml  baseline.yaml  figure2_qk_false_repro.yaml  first_benchmark.yaml  hf_dolma_smoke.yaml  instability_probe.yaml  local_smoke.yaml  m3_wandb_smoke.yaml  med_lr.yaml  smoke.yaml  tiny_lr.yaml
data/smoke/: train.jsonl
logs/slurm/: lr-instability-sweep-56560095_0.err  lr-instability-sweep-56560095_0.out  lr-instability-sweep-56560095_1.err  lr-instability-sweep-56560095_1.out  lr-instability-sweep-56560095_10.err  lr-instability-sweep-56560095_10.out  lr-instability-sweep-56560095_11.err  lr-instability-sweep-56560095_11.out  lr-instability-sweep-56560095_12.err  lr-instability-sweep-56560095_12.out  (+56 more)
notebooks/: lr_sweep_analysis.ipynb
scripts/: calculate_attention_sigma.py  calibrate_attention_logits.py  dolma_download.sh  estimate_resource_sweep.py  export_attention_diagnostics_to_excel.py  generate_components.py  setup.sh  slurm_scaling_law.sh  tokenizer.sh  verify_seed.py
src/slm/: main.py  (+3 more)
tests/: test_configs.py  test_model_smoke.py
(+95 files in other folders)
