[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slm"
version = "0.1.0"
description = "SLM training pipeline"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "omegaconf>=2.3.0",
    "tokenizers>=0.22.0",
    "pyyaml>=6.0",
    "tqdm>=4.67",
]

[project.optional-dependencies]
data = [
    "datasets",
    "ray[data]",
    "pyarrow",
    "s3fs",
]
tracking = [
    "wandb",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
